--- a/gb/25/2/18/n14439748.md
+++ b/gb/25/2/18/n14439748.md
@@ -18,37 +18,50 @@
 <p>王先生解释说：“早上我跟她讲，我们愿意一个家庭出100元给你，我们直接回成都，想早点回去，我们自己玩。她回答说，一个人100元，才2000块钱，那怎么同意，要不然就不要走了。”王先生感到很气愤。</p>
 <p>王先生与导游争辩后，游客没有再被强制消费。据王先生表示，导游当天下午就离团了，由大巴司机带着他们游客玩。然后，他在事发第三天的2月6号也离团了。</p>
 <p>王先生强调：“我们本来以为她说的消费是吃的喝的，后面才知道是藏区推销的银制品和玉石，那都成千上万，她让我们强制消费玉石都是几千上万的，谁买得起？”</p>
+<p>2月16日晚，成都市文化市场综合行政执法总队通报称，初步核实，涉事旅游团队共8组25人，出团旅行社为四川省中国国际旅行社有限责任公司金沙路分社，旅游大巴属于阿坝州岷江运业有限责任公司。</p>
+<p>通告称，8组游客行前均与旅行社签订了旅游合同，约定了相同的购物点位。因涉事大巴车和导游何某均出团在外，有待返回后进一步调查。</p>
 <p>责任编辑：高慧</p>
-<p>&nbsp;</p>
-	
+<div class="related-article" style="display: block;"><span style="color: #000; font-weight: bold;">推荐阅读：</span></div>
+<ul class="related-posts" style="color: #0000ff; list-style: inside;">
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/1/4/n14405815.md#1" target="_blank" rel="noopener">中共推多国免签 国际机场人流萧条 专家解析</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/11/24/n14377745.md#1" target="_blank" rel="noopener">九寨沟罕见大堵车 上千游客错过高铁被滞留</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/11/18/n14373026.md#1" target="_blank" rel="noopener">日本或考虑取消对外国游客免税购物上限</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/2/5/n14430380.md#1" target="_blank" rel="noopener">游客曝上千人年初五滞留云南玉龙雪山顶</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/1/27/n14423616.md#1" target="_blank" rel="noopener">经济低迷 中国游客不再狂买 日商改变策略</a></span></li>
+</ul>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/18/n14439734.md#1">三退声明精选（2025/02/17）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/17/n14439602.md#1">影视大亨前妻金巧巧迟到 被惠英红勒令道歉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/17/n14439517.md#1">湖北一男孩三年前生吃蟹腿 肺吸虫钻进心脏</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/17/n14439251.md#1">乘客携带打火机？ 东方航空起飞延误40分钟</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/6/n11704921.md#1" target="_blank">启明：共产党注定灭亡</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/11/n10473939.md#1" target="_blank">受化学毒剂侵害 越战老兵绝望中见证奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/17/n10491766.md#1" target="_blank">朝鲜战争锣鼓掩盖下的暴力土改</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/28/n11285391.md#1" target="_blank">没有题海和补课 女儿考上名牌大学</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/11/n10554945.md#1">上马杀敌 下马写书的猛将薛仁贵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/8/n14432721.md#1">传承二千年 元宵节俗内涵由来知多少？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/14/n14437085.md#1">英国医生披露 死而复活的人学到什么？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/12/n14435443.md#1">梦中来讨债   原来这儿子是前世冤家</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/10/n14434141.md#1">【未解之谜】两度濒死奇迹复活 名律师发现生命的真相</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/15/n14437908.md#1">【军事情报局】永远修不好的俄罗斯核巡洋舰</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/17/n14439621.md#1">【纪元焦点】中共掩盖疫情真相 习向马云讨教？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/17/n14439425.md#1">【新闻大家谈】中国开年疫情猛 将爆猝死潮？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/15/n14437998.md#1">用过的茶包是个宝 12大神奇妙用你一定要知道</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/14/n14437436.md#1">八种Costco平价商品 最合适家庭囤货</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/16/n14438205.md#1">《我是哪吒2》再引热议 被批“诈骗”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/14/n14437504.md#1">票房大翻车 红片《蛟龙行动》官宣撤档</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/15/n14438015.md#1">会否与赵丽颖三度搭戏 林更新高情商回应获赞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/15/n14438035.md#1">《罗刹海市》牵线 刀郎邀蒲松龄后人看演唱会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/16/n14438203.md#1">罗伯派汀森主演的《米奇17号》首映评价出炉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/14/n14437488.md#1">章子怡当综艺评委 被这些演员浮夸表演惹怒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/16/n14438278.md#1">想到游轮上度假？ 专家提醒你注意这几件事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/15/n14437904.md#1">【健康1+1】全球流感警报！高致命禽流感H5N1爆发！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/12/n14435238.md#1">专家剖析慢性疲劳成因 从饮食入手重获健康</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/9/n14433328.md#1">饮用水中持久化学物质或致癌症发病率上升</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/3/n14429012.md#1">极简鞋或赤脚鞋有利于足部健康</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/2/18/n14439748.htm">游客九寨沟被强制购物 大巴雪天停无人区</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/2/18/n14439748.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
